tup/parse/testdata/error/output/assignments.tup
# missing right-hand side
/home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:9: error: expecting "expression", got ""

# unclosed labeled destructuring
/home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:12: error: expecting ")", got "="

# missing expression after mut
/home/user/tuppence/tup/parse/testdata/error/input/assignments.tup:1:13: error: expecting "expression", got ""
